[gd_scene load_steps=5 format=3 uid="uid://be0opqvvn7rtt"]

[ext_resource type="Script" uid="uid://bv7kiktfna0cf" path="res://pipe_start.gd" id="1_hxrnu"]
[ext_resource type="Texture2D" uid="uid://bdensxbvlmf5l" path="res://assets/pipes.png" id="1_n3scm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxrnu"]
size = Vector2(384, 384)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hxrnu"]
light_mode = 1

[node name="PipeStart" type="Node2D"]
script = ExtResource("1_hxrnu")

[node name="SheathedPipe" type="Sprite2D" parent="."]
scale = Vector2(8, 8)
texture = ExtResource("1_n3scm")
hframes = 6
vframes = 3
frame = 14

[node name="UnsheathedPipe" type="Sprite2D" parent="."]
visible = false
position = Vector2(-4, 4)
scale = Vector2(8, 8)
texture = ExtResource("1_n3scm")
hframes = 6
vframes = 3
frame = 10

[node name="PipeLocation" type="Node2D" parent="."]

[node name="Trigger" type="Area2D" parent="PipeLocation"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeLocation/Trigger"]
shape = SubResource("RectangleShape2D_hxrnu")

[node name="GrabLabel" type="RichTextLabel" parent="PipeLocation"]
visible = false
z_index = 1
z_as_relative = false
material = SubResource("CanvasItemMaterial_hxrnu")
offset_left = -248.0
offset_top = -144.0
offset_right = -124.0
offset_bottom = -124.0
scale = Vector2(4, 4)
text = "Press 'E' to grab."
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="PipeLocation/Trigger" to="." method="_on_trigger_body_entered"]
[connection signal="body_exited" from="PipeLocation/Trigger" to="." method="_on_trigger_body_exited"]
